--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,36 @@ body {
 .cart-main {
   padding-right: 30px;
 }
+.stars-outer {
+  display: inline-block;
+  position: relative;
+}
+.stars-inner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 2%;
+}
+.stars-outer::before {
+  content: "\f005 \f005 \f005 \f005 \f005";
+  font-family: 'Font Awesome 5 Free';
+  /* font-weight: 900; */
+  color: #ccc;
+}
+ 
+.stars-inner::before {
+  content: "\f005 \f005 \f005 \f005 \f005";
+  font-family: 'Font Awesome 5 Free';
+  font-weight: 900;
+  color: #f8ce0b;
+}
+.ratings{
+  display: inline-flex;
+  align-items: baseline;
+  gap: 5px;
+}
 @media only screen and (max-width: 768px) {
   #all-products {
     display: grid;
