--- a/css/style.css
+++ b/css/style.css
@@ -2,29 +2,29 @@ body {
   overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
 }
-.search-field {
+/* .search-field {
   border: none;
   border-radius: 50px;
   padding: 5px;
   outline: none;
-}
-.search-field:hover {
+} */
+/* .search-field:hover {
   outline: none;
   border: none;
-}
-.search-box {
+} */
+/* .search-box {
   border: 1px solid rgb(3, 118, 211);
   width: 281px;
   border-radius: 5px;
   margin: auto;
   margin-top: 50px;
   border-right: none;
-}
-.search-button {
+} */
+/* .search-button {
   padding: 10px 50px;
   border-radius: 25px;
   margin-left: 20px;
-}
+} */
 #all-products {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -34,28 +34,49 @@ body {
   margin: auto;
   align-items: center;
   justify-content: center;
+  padding-left: 1%;
+  grid-gap: 16px;
+}
+.product-title{
+  font-size: 1.3em;
+  font-weight: 600;
 }
 .single-product {
   padding: 10px;
   transition: 0.6s;
+  width: 100%;
+  /* min-height: 538px; */
+  min-height: 523px;
+  border: 2px solid #BABEC1;
+  border-radius: 5px;
+  margin: 0 10px 0 10px;
+  position: relative;
+}
+.btn-align2{
+  position: absolute;
+  bottom: 2%;
+  /* right: 25%; */
+  right: 20%;
+  left: 20%;
 }
 .single-product:hover {
   box-shadow: 4px 4px 7px gray;
   border-radius: 10px;
-  border: 1px solid cyan;
+  border: 1px solid #E9E9E9;
+  background-color: #d1e9fc2f;
+  /* background-color: #1a1b1b0c; */
 }
 .product-image {
   width: 150px;
   height: 150px;
 }
 .cart {
-  width: 350px;
   /* border: 1px solid green; */
   padding: 10px;
   box-shadow: 10px 10px 20px gray;
   border-radius: 5px;
-  margin-right: 30px;
   position: fixed;
+  width: 20%;
 }
 .cart-main {
   padding-right: 30px;
@@ -89,6 +110,15 @@ body {
   display: inline-flex;
   align-items: baseline;
   gap: 5px;
+}
+.form-control-borderless {
+  border: none;
+}
+
+.form-control-borderless:hover, .form-control-borderless:active, .form-control-borderless:focus {
+  border: none;
+  outline: none;
+  box-shadow: none;
 }
 @media only screen and (max-width: 768px) {
   #all-products {
